# robo-core-printer-image-processer

./: BitmapBoolImage.h  CMakeLists.txt  ConvertedImage.h  Converter.h  Image.h  ImageProcesser.h  Line.h  Pair.h  ProcessedImage.h  Row.h  line.h  main.cpp  simple_ostream_test.h  skrypt.py
